2006-11-09  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (staprun_CFLAGS): New. Use PROCFLAGS.
	* configure.ac: Add PROCFLAGS. Processor-dependent 
	compilation flags.
	* configure: Rebuilt.
	* Makefile.in: Rebuilt.
	
2006-11-09  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwarf_query::dwarf_query): Looks for "maxactive"
	return probe variant.
	(dwarf_derived_probe::dwarf_derived_probe): Initializes
	has_maxactive and maxactive_val member variables.
	(dwarf_derived_probe::register_function_variants): Matches
	"maxactive" return probe variant.
	(dwarf_derived_probe_group::emit_module_decls): Emits code to use
	maxactive data.
	(dwarf_derived_probe_group::emit_module_init): Ditto.

2006-11-08  David Smith  <dsmith@redhat.com>

	* cache.cxx (get_from_cache): To preserve semantics with
	non-cached use, if the last pass is 3, display the cached C
	source.

2006-11-08  Frank Ch. Eigler  <fche@elastic.org>

	* staptree.cxx (print_format::components_to_string): Quote ".
	(c_unparser::visit_print_format): Don't use lex_cast_qstring
	as it overdoes \ quoting.  Resemble ::visit_literal_string
	instead.

2006-11-08  Frank Ch. Eigler  <fche@elastic.org>

	* util.h (lex_cast_qstring): Move def'n here.  Also quote \.
	(stringify, lex_cast, lex_cast_hex): Move defn here.
	* buildrun.cxx, elaborate.cxx, main.cxx, staptree.cxx: Adapt.

2006-11-07  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (profile_derived_probe_group::emit_module_decls):
	Pass along incoming pt_regs to context of timer.profile handlers.

2006-11-06  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (var::init): Check for errors when
	allocating arrays of stats, as well as other arrays.

2006-11-06  David Smith  <dsmith@redhat.com>

	Added "limit EXP" support to foreach statements.
	* translate.cxx (c_tmpcounter::visit_foreach_loop): Handles
	"limit" member variable.
	(c_unparser::visit_foreach_loop): Ditto.
	* staptree.cxx (foreach_loop::print): Prints "limit EXP"
	addition.